deploy/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weaxle78-deployment
  labels:
    app: weaxle78
spec:
  selector:
    matchLabels:
      app: weaxle78
  template:
    metadata:
      labels:
        app: weaxle78
    spec:
      restartPolicy: Always
      containers:
        - name: weaxle78
          image: ghcr.io/pmdevers/weaxle78:sha-306a92a
          resources:
            requests:
              memory: 100Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 200m
          ports:
            - containerPort: 3001
