deploy/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weaxle78
spec:
  selector:
    app: weaxle78
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
