deploy/production/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weaxle78
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - www.weaxle78.nl
    - www.weaxle78.com
    - weaxle78.nl
    - weaxle78.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: weaxle78
          port: 8080
